--- a/assets/sass/single.scss
+++ b/assets/sass/single.scss
@@ -105,6 +105,8 @@ header { // The header/top section of a post, pretty self explanatory
 }
 
 .gallery {
+    margin: 0 0 1em 0;
+
     a {
         display: block;
         width: 50%;
